# config/routes.rb
@@ -1,5 +1,7 @@
 Rails.application.routes.draw do
-  mount Rswag::Ui::Engine => '/api-docs'
+  mount Rswag::Ui::Engine => "/api-docs"
   get "health_check", to: "health_check#index"
-  # post "login", to: "sessions#create"
+  namespace :v1 do
+    post "login", to: "sessions#create"
+  end
 end
